==> cvetaevvitaliy/NRF52840_SSD1306/ssd1306/ssd1306.c <==
#include "ssd1306.h"
#include "nrf_delay.h"
#define TWI_INSTANCE_ID     0

bool ssd1306_Init(void) {

    // Wait for the screen to boot
    nrf_delay_ms(300);

    /* Init LCD */
    ssd1306_WriteCommand(DISPLAYOFF);
    ssd1306_WriteCommand(SETDISPLAYCLOCKDIV);
    ssd1306_WriteCommand(0xF0); // Increase speed of the display max ~96Hz
    ssd1306_WriteCommand(SETMULTIPLEX);
    ssd1306_WriteCommand(height() - 1);
    ssd1306_WriteCommand(SETDISPLAYOFFSET);
    ssd1306_WriteCommand(0x00);
    ssd1306_WriteCommand(SETSTARTLINE);
    ssd1306_WriteCommand(CHARGEPUMP);
    ssd1306_WriteCommand(0x14);
    ssd1306_WriteCommand(MEMORYMODE);
    ssd1306_WriteCommand(0x00);
    ssd1306_WriteCommand(SEGREMAP);
    ssd1306_WriteCommand(COMSCANINC);
    ssd1306_WriteCommand(SETCOMPINS);

    if (display_geometry == GEOMETRY_128_64) {
        ssd1306_WriteCommand(0x12);
    } else if (display_geometry == GEOMETRY_128_32) {
        ssd1306_WriteCommand(0x02);
    }

    ssd1306_WriteCommand(SETCONTRAST);

    if (display_geometry == GEOMETRY_128_64) {
        ssd1306_WriteCommand(0xCF);
    } else if (display_geometry == GEOMETRY_128_32) {
        ssd1306_WriteCommand(0x8F);
    }

    ssd1306_WriteCommand(SETPRECHARGE);
    ssd1306_WriteCommand(0xF1);
    ssd1306_WriteCommand(SETVCOMDETECT); //0xDB, (additionally needed to lower the contrast)
    ssd1306_WriteCommand(0x40);            //0x40 default, to lower the contrast, put 0
    ssd1306_WriteCommand(DISPLAYALLON_RESUME);
    ssd1306_WriteCommand(NORMALDISPLAY);
    ssd1306_WriteCommand(0x2e);            // stop scroll
    ssd1306_WriteCommand(DISPLAYON);

    // Set default values for screen object
    SSD1306.CurrentX = 0;
    SSD1306.CurrentY = 0;
    SSD1306.Color = White;

    // Clear screen
    ssd1306_Clear();

    // Flush buffer to screen
    ssd1306_UpdateScreen();

    return true;
}

static void ssd1306_WriteCommand(uint8_t command) {

    uint8_t buf[2] = {0x00, command};
    nrf_drv_twi_tx(&SSD1306.oled_twi_master, SSD1306_I2C_ADDR, buf, 2, false);
}

static void ssd1306_WriteData(uint8_t* data, uint16_t size) {

    uint8_t buf[size + 1];
    buf[0] = 0x40;
    memcpy(buf + 1, data, size);
    nrf_drv_twi_tx(&SSD1306.oled_twi_master, SSD1306_I2C_ADDR, buf, size+1, false);
    
}
