==> twolfe239/ADHF21_EM/Src/ssd1306.c <==
#include "ssd1306.h"

uint8_t ssd1306_Init(void) {
	/* Check if LCD connected to I2C */
	if (HAL_I2C_IsDeviceReady(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 5, 1000)
			!= HAL_OK) {
		SSD1306.Initialized = 0;
		/* Return false */
		return 0;
	}

	// Wait for the screen to boot
	HAL_Delay(100);

	/* Init LCD */
	ssd1306_WriteCommand(DISPLAYOFF);
	ssd1306_WriteCommand(SETDISPLAYCLOCKDIV);
	ssd1306_WriteCommand(0xF0); // Increase speed of the display max ~96Hz
	ssd1306_WriteCommand(SETMULTIPLEX);
	ssd1306_WriteCommand(height() - 1);
	ssd1306_WriteCommand(SETDISPLAYOFFSET);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SETSTARTLINE);
	ssd1306_WriteCommand(CHARGEPUMP);
	ssd1306_WriteCommand(0x14);
	ssd1306_WriteCommand(MEMORYMODE);
	ssd1306_WriteCommand(0x00);
	ssd1306_WriteCommand(SEGREMAP);
	ssd1306_WriteCommand(COMSCANINC);
	ssd1306_WriteCommand(SETCOMPINS);

	if (display_geometry == GEOMETRY_128_64) {
		ssd1306_WriteCommand(0x12);
	} else if (display_geometry == GEOMETRY_128_32) {
		ssd1306_WriteCommand(0x02);
	}

	ssd1306_WriteCommand(SETCONTRAST);

	if (display_geometry == GEOMETRY_128_64) {
		ssd1306_WriteCommand(0xCF);
	} else if (display_geometry == GEOMETRY_128_32) {
		ssd1306_WriteCommand(0x8F);
	}

	ssd1306_WriteCommand(SETPRECHARGE);
	ssd1306_WriteCommand(0xF1);
	ssd1306_WriteCommand(SETVCOMDETECT); //0xDB, (additionally needed to lower the contrast)
	ssd1306_WriteCommand(0x40);	    //0x40 default, to lower the contrast, put 0
	ssd1306_WriteCommand(DISPLAYALLON_RESUME);
	ssd1306_WriteCommand(NORMALDISPLAY);
	ssd1306_WriteCommand(0x2e);            // stop scroll
	ssd1306_WriteCommand(DISPLAYON);

	// Set default values for screen object
	SSD1306.CurrentX = 0;
	SSD1306.CurrentY = 0;
	SSD1306.Color = Black;

	// Clear screen
	ssd1306_Clear();

	// Flush buffer to screen
	ssd1306_UpdateScreen();

	SSD1306.Initialized = 1;

	/* Return OK */
	return 1;
}

static void ssd1306_WriteCommand(uint8_t command) {
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &command, 1,
			10);
#endif
}

static void ssd1306_WriteData(uint8_t *data, uint16_t size) {
#ifdef USE_DMA
	while(HAL_I2C_GetState(&SSD1306_I2C_PORT) != HAL_I2C_STATE_READY);
	HAL_I2C_Mem_Write_DMA(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size);
#else
	HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x40, 1, data, size,
			100);
#endif
}
